# wicamp

./: .env.template  .gitignore  README.md  course_links.json  main.py  pyproject.toml
tests/: strtime.py
wicamp/: __main__.py  app.py  course.py  main.py  pages.py  stringtools.py  strtime.py  web_driver.py
